chore(Gadget-extiw): Comment

--- a/src/gadgets/extiw/MediaWiki:Gadget-extiw.css
+++ b/src/gadgets/extiw/MediaWiki:Gadget-extiw.css
@@ -1,3 +1,4 @@
+/* 外链 */
 a.extiw:not([href*=".moegirl.org.cn"]),
 a.extiw:not([href*=".moegirl.org.cn"]):visited,
 body.heimu_toggle_on span.heimu a.extiw:not([href*=".moegirl.org.cn"]),
