--- a/src/gadgets/deletion/MediaWiki:Gadget-deletion.css
+++ b/src/gadgets/deletion/MediaWiki:Gadget-deletion.css
@@ -20,9 +20,9 @@
 }
 
 .batdel-error {
-    color: #d32f2f;
+    color: #D32F2F;
 }
 
 .batdel-success {
-    color: #388e3c;
+    color: #388E3C;
 }
