chore: Add track field

--- a/src/gadgets/code-prettify/MediaWiki:Gadget-code-prettify.css
+++ b/src/gadgets/code-prettify/MediaWiki:Gadget-code-prettify.css
@@ -1,5 +1,7 @@
-/* https://github.com/google/code-prettify/blob/master/src/prettify.css */
-
+/**
+ * @source https://github.com/google/code-prettify/blob/master/src/prettify.css
+ * 更新后请同步更新上面链接到最新版本
+ */
 /**
  * @license
  * Copyright (C) 2015 Google Inc.
