--- a/src/gadgets/dark-mode/MediaWiki:Gadget-dark-mode.css
+++ b/src/gadgets/dark-mode/MediaWiki:Gadget-dark-mode.css
@@ -1,3 +1,7 @@
+/**
+ * @source https://en.wikipedia.org/wiki/_?oldid=1064850831
+ * 更新后请同步更新上面链接到最新版本
+ */
 /* WikimediaUI Dark Mode
  *
  * Wikimedia Design Team 2019-2021
