--- a/src/gadgets/noteTA/MediaWiki:Gadget-noteTA.css
+++ b/src/gadgets/noteTA/MediaWiki:Gadget-noteTA.css
@@ -1,3 +1,7 @@
+/**
+ * @source https://zh.wikipedia.org/wiki/_?oldid=22973238 https://zh.wikipedia.org/wiki/_?oldid=31522320
+ * 更新后请同步更新上面链接到最新版本
+ */
 /*
  * 引自 https://zh.wikipedia.org/wiki/MediaWiki:Gadget-noteTA.css https://zh.wikipedia.org/wiki/MediaWiki:Gadget-noteTAvector.css
  * User:AnnAngela做了整合
