--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -76,7 +76,7 @@ body.skin-moeskin #moe-main-container {
 
 /* adjust top banner */
 body.skin-moeskin #moe-main-container > #moe-topbanner-container {
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 body.skin-moeskin #moe-main-container > #moe-topbanner-container > #moe-topbanner {
