feat(Group-checkuser): Add copy username function

--- a/src/groups/checkuser/MediaWiki:Group-checkuser.css
+++ b/src/groups/checkuser/MediaWiki:Group-checkuser.css
@@ -30,3 +30,7 @@ div.vectorMenu li.checkuser-show {
 .vectorMenu .checkuser-show a {
     cursor: pointer;
 }
+
+.copyUsername {
+    margin-left: 0.5rem;
+}
