feat: + ZhMoegirl_12ndAnniversary banner

--- a/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
+++ b/src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
@@ -7,7 +7,7 @@
 
 /* 2022春季topbar */
 body.skin-vector {
-    background: url("//img.moegirl.org.cn/topbar/10w.png") no-repeat top left #F6F6F6;
+    background: url("https://app.moegirl.org.cn/background/ZhMoegirl_12ndAnniversary/vector.png") no-repeat top left #F6F6F6;
 }
 
 /* 侧边栏、顶部栏 */
