--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -6,6 +6,10 @@ body.skin-moeskin #moe-bg-container {
     background-position: left center;
 }
 
+body.skin-moeskin #moe-bgCover-container {
+    --background-url: url("https://app.moegirl.org.cn/background/ZhMoegirl_12ndAnniversary/moeskin.jpg");
+}
+
 /* footer */
 body.skin-moeskin #footer-info-copyright {
     padding: 15px 0 30px;
