fix(Gadget-mobile-styles.css): ol on small screens
On a small screen, ol numbers will be partly invisible. See [this special page](https://mzh.moegirl.org.cn/Special:%E7%9F%AD%E9%A1%B5%E9%9D%A2) as an example.

--- a/src/gadgets/mobile-styles/MediaWiki:Gadget-mobile-styles.css
+++ b/src/gadgets/mobile-styles/MediaWiki:Gadget-mobile-styles.css
@@ -411,6 +411,7 @@ html>body.skin-minerva .content {
 /* 修复列表对齐问题 */
 html>body.skin-minerva .content ol {
     list-style-position: outside;
+    padding-left: 2.25em;
 }
 
 /* 修复广告和侧边栏均z-index为0的问题 */
