--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -18,11 +18,15 @@ body.skin-moeskin #footer-info-copyright {
 
 body.skin-moeskin #footer-moegirl {
     color: #2F2F2F;
-
-    /* white-space: nowrap; */
     flex-wrap: wrap;
     display: flex;
     gap: 1rem;
+}
+
+@media (max-width: 576px) {
+    body.skin-moeskin #footer-moegirl {
+        flex-direction: column;
+    }
 }
 
 body.skin-moeskin #footer-moegirl h4 {
@@ -64,13 +68,14 @@ body.skin-moeskin #footer-moegirl #footer-qrcode-area > div span {
 }
 
 body.skin-moeskin #footer-moegirl #footer-qrcode-area img {
-    width: 100%;
     margin: 0 auto;
     display: block;
     border-radius: 0.5rem;
     padding: 0.1rem;
     background-color: #FFF;
     border: 1px solid #DDD;
+    max-width: 80px;
+    width: 100%;
 }
 
 /* adjust bg opacity of article area */
