--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -1,12 +1,7 @@
 /* 此处放置的 CSS 会影响使用 MoeSkin 皮肤的用户 */
 
-/* banner image */
-body.skin-moeskin #moe-bg-container {
-    background-image: linear-gradient(to bottom, rgb(255 255 255 / 0%) 80%, var(--theme-background-color)), /* 顶部头图 URL 地址 */ url("//img.moegirl.org.cn/topbar/zhMoegirl_2022Spring.jpg");
-    background-position: left center;
-}
-
-body.skin-moeskin #moe-bgCover-container {
+/* background image */
+body.skin-moeskin #moe-global-background {
     --background-url: url("https://app.moegirl.org.cn/background/ZhMoegirl_12ndAnniversary/moeskin.jpg");
 }
 
