--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -183,3 +183,18 @@ body.skin-moeskin .mw-mmv-wrapper {
 #mw-content-text table img {
     max-width: unset;
 }
+
+/* 移动设备优化 */
+@media (max-width: 576px) {
+    .infoBox {
+        width: 100% !important;
+    }
+    .infotemplatebox {
+        width: 100%;
+        float: none;
+        margin: 1rem 0;
+    }
+    #mw-content-text * {
+        float: unset !important;
+    }
+}
