--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -188,21 +188,17 @@ body.skin-moeskin .mw-mmv-wrapper {
 @media (max-width: 576px) {
 
     /* 清除浮动 */
-    #mw-content-text * {
+    body.skin-moeskin #mw-content-text * {
         float: unset !important;
     }
 
-    /* 首页 */
-    .mainpage-container {
-        flex-direction: column;
-    }
-
-    .mainpage-container .mainpage-box,
-    .mainpage-container .mainpage-newsbox {
-        width: 100%;
-    }
-
-    .mainpage-container .moegirlSister_container {
-        margin-right: 1rem;
+    /* [[T:Infobox]] */
+    body.skin-moeskin .infotemplatebox,
+    body.skin-moeskin table.infobox,
+    body.skin-moeskin table.infoboxSpecial {
+        width: 100% !important;
+        float: none !important;
+        margin: 1rem 0 !important;
+        float: unset !important;
     }
 }
