fix(Navigation_popups): add styles

--- a/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
+++ b/src/gadgets/Navigation_popups/MediaWiki:Gadget-popups.css
@@ -27,6 +27,7 @@ del.popupDiff {
     font-size: 11px;
     box-shadow: 0 3px 8px rgb(50 50 50 / 35%);
     word-wrap: break-word;
+    line-height: normal;
 }
 
 .navpopup hr {
