--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -280,3 +280,15 @@ body.skin-moeskin .mw-mmv-wrapper {
         display: none;
     }
 }
+
+/* 临时修复 */
+fieldset {
+    border: 1px solid #2a4b8d !important;
+    margin: 1em 0 1em 0 !important;
+    padding: 0 1em 1em !important;
+}
+
+fieldset.nested {
+    margin: 0 0 0.5em 0 !important;
+    padding: 0 0.5em 0.5em !important;
+}
