--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -292,3 +292,8 @@ fieldset.nested {
     margin: 0 0 0.5em !important;
     padding: 0 0.5em 0.5em !important;
 }
+
+legend {
+    padding: 0.5em !important;
+    font-size: 95% !important;
+}
