--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -296,8 +296,27 @@ body.skin-moeskin .mw-mmv-wrapper {
     font-weight: 700;
 }
 
-/* 搜索结果不需要边距 */
-/* https://app.moegirl.org.cn/wiki/skins/MoeSkin/dist/style.css */
+/* 搜索页样式 */
+.skin-moeskin #mw-search-top-table {
+    display: flex;
+}
+.skin-moeskin #mw-search-top-table > div:first-of-type {
+    float: unset !important;
+    flex: 1;
+}
+@media (max-width: 768px) {
+    .skin-moeskin #mw-search-top-table {
+        flex-direction: column;
+    }
+    .skin-moeskin .mw-search-profile-tabs {
+        margin-top: 0;
+    }  
+}
+@media (min-width: 768px) {
+    .skin-moeskin #mw-search-top-table {
+        justify-content: space-between;
+    }  
+}
 .skin-moeskin #mw-content-text .search-types ul,
 .skin-moeskin #mw-content-text ul.mw-search-results {
     list-style: none;
