--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -329,11 +329,11 @@ body.skin-moeskin .mw-mmv-wrapper {
 }
 
 /* 优化表格在窄屏设备的效果 */
-.skin-moeskin table th:first-of-type {
+.skin-moeskin table.wikitable th:first-of-type {
     white-space: nowrap;
 }
 
-.skin-moeskin table th:not(:first-of-type) {
+.skin-moeskin table.wikitable th:not(:first-of-type) {
     min-width: 5rem;
 }
 
