fix(moeskin-styles): temporary fix img elements' height

--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -277,6 +277,11 @@ body.skin-moeskin .mw-mmv-wrapper {
     font-weight: 700;
 }
 
+/* @fix 临时修复 img 元素的高度 */
+img {
+    height: auto;
+}
+
 /* 搜索页样式 */
 .skin-moeskin #mw-search-top-table {
     display: flex;
