chore: remove unnecessary styles

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -738,8 +738,7 @@ div#simpleSearch button#searchButton {
 }
 
 /* 公告栏滚动Rollnews */
-#siteNotice .scrollDiv,
-#moe-sitenotice-container .scrollDiv {
+#siteNotice .scrollDiv {
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -747,18 +746,15 @@ div#simpleSearch button#searchButton {
     height: 1.28rem;
 }
 
-#siteNotice .scrollDiv:hover,
-#moe-sitenotice-container .scrollDiv:hover {
+#siteNotice .scrollDiv:hover {
     font-weight: 700;
 }
 
-#siteNotice .scrollDiv:empty,
-#moe-sitenotice-container .scrollDiv:empty {
+#siteNotice .scrollDiv:empty {
     display: none;
 }
 
-#siteNotice .scrollDiv>*,
-#moe-sitenotice-container .scrollDiv>* {
+#siteNotice .scrollDiv>* {
     list-style: none;
     padding-left: 0;
     position: absolute;
@@ -766,15 +762,12 @@ div#simpleSearch button#searchButton {
     top: 1.28rem;
 }
 
-#siteNotice .scrollDiv>*:first-child,
-#moe-sitenotice-container .scrollDiv>*:first-child {
+#siteNotice .scrollDiv>*:first-child {
     top: 0;
 }
 
 #siteNotice .scrollDiv.scrolling.animation,
-#siteNotice .scrollDiv.scrolling.animation>*,
-#moe-sitenotice-container .scrollDiv.scrolling.animation,
-#moe-sitenotice-container .scrollDiv.scrolling.animation>* {
+#siteNotice .scrollDiv.scrolling.animation>* {
     transition: all 0.37s ease-in-out;
 }
 
